--- a/_posts/2018-06-03-Stats-1.markdown
+++ b/_posts/2018-06-03-Stats-1.markdown
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Indaba 18’ notes: Linear Algebra for Machine Learning"
+title:  "Why Not !"
 date:   2018-06-03 12:00:00 +0000
 categories: Data Analysis
 use_math: true
